--- a/ExpenseTrackerApp/styles.css
+++ b/ExpenseTrackerApp/styles.css
@@ -4,6 +4,8 @@
     --clr-primary: #6ddf6d;
     --clr-secondary: #ff9f64;
     --clr-tertiory: #ff6464;
+    --clr-text-light: #f8f8f8;
+    --clr-text-dark: #0b1118;
     --clr-bg: #eeeeee;
     --clr-dark: #0b1118;
     --clr-light: #f8f8f8;
@@ -32,7 +34,7 @@ body {
     position: relative;
     border: none;
     border-radius: 50px;
-    /* box-shadow: var(--shadow-main); */
+    box-shadow: var(--shadow-main);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -85,7 +87,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: var(--clr-light);
+    color: var(--clr-text-light);
 }
 .in-amt,
 .out-amt {
@@ -206,32 +208,42 @@ body {
 }
 .active {
     height: 320px;
-    width: 93%;
-    background: linear-gradient(#2d2d2db3, #000000);
+    width: 92%;
+    background: linear-gradient(#1f1f1fbf, #000000);
     box-shadow: 4px 5px 15px #6a6a6a;
     backdrop-filter: blur(5px);
 }
-.func-tab {
+.func-tab,
+.add-Exp {
     height: 200px;
     width: 100%;
     padding: 1rem;
     display: none;
+    color: var(--clr-text-light);
+    transition: 250ms ease-in;
+}
+.func-tab {
+    gap: 0.5rem;
     flex-direction: column;
     justify-content: start;
     align-items: center;
-    gap: 0.5rem;
-    color: var(--clr-light);
-    transition: 250ms ease;
-    transition-delay: 250ms;
+}
+.add-Exp {
+    flex-direction: column;
+    align-items: start;
+    border-radius: 20px;
 }
 .func-active {
+    display: flex;
+}
+.exp-active {
     display: flex;
 }
 .func-tab input {
     height: 100px;
     width: 300px;
     border: none;
-    color: var(--clr-light);
+    color: var(--clr-text-light);
     font-size: 4rem;
     text-align: center;
     background-color: transparent;
@@ -241,15 +253,36 @@ body {
     -webkit-appearance: none;
     margin: 0;
 }
-.add-new input {
+.add-Exp input:nth-child(2) {
     height: 30px;
     width: 200px;
     margin-block: 10px;
-    color: white;
-    font-size: 1rem;
+    color: var(--clr-text-light);
+    font-size: 2rem;
     background-color: transparent;
     border: none;
-    border-bottom: 1px solid rgb(253, 253, 253);
+}
+.add-Exp input[type="number"]::-webkit-outer-spin-button,
+.add-Exp input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+.add-Exp h5 {
+    font-weight: 300;
+}
+.add-Exp input:nth-child(4) {
+    height: 30px;
+    width: 50px;
+    color: var(--clr-text-light);
+    border: none;
+    background-color: transparent;
+}
+.add-Exp input:nth-child(6) {
+    height: 40px;
+    width: 100%;
+    color: var(--clr-text-light);
+    border: none;
+    background-color: transparent;
 }
 .btn-tab {
     bottom: 0.95rem;
@@ -269,7 +302,7 @@ body {
     background-color: transparent;
     border-radius: 15px;
     cursor: pointer;
-    color: var(--clr-light);
+    color: var(--clr-text-light);
     transition: ease 250ms;
 }
 .options button:nth-child(1) {
@@ -280,16 +313,9 @@ body {
     background-color: #ff9f64;
     border: 2px solid #ea6512;
 }
-/* .options button:nth-child(3) {
-    background-color: #ff6464;
-    border: 2px solid #dd1c1c;
-}  */ 
 .options button:nth-child(1):hover {
     background-color: #00c900;
 }
 .options button:nth-child(2):hover {
     background-color: #ea6512;
 }
-/* .options button:nth-child(3):hover {
-    background-color: #dd1c1c;
-} */
