Chore: changed style a little bit

--- a/ToDoListApp/style.css
+++ b/ToDoListApp/style.css
@@ -152,7 +152,8 @@ h1 span:nth-child(3) {
 }
 .task {
     width: 70%;
-    font-size: 1.4rem;
+    margin-inline: 10px;
+    font-size: 1.2rem;
     font-weight: 400;
     padding: auto;
 }
