--- a/WeatherApp/style.css
+++ b/WeatherApp/style.css
@@ -25,8 +25,9 @@ body {
 }
 .container {
     height: 850px;
-    width: 450px;
-    padding: 1.5rem;
+    width: 420px;
+    padding-block: 1.5rem;
+    padding-inline: 1.2rem;
     background: linear-gradient(rgb(169, 205, 231), rgb(57, 85, 110));
     border-radius: 50px;
     display: flex;
@@ -146,13 +147,39 @@ body {
     display: flex;
     align-items: center;
 }
-/* .hourly-forcast {
-    height: 140px;
+.hourly-forcast {
+    height: 145px;
     width: 100%;
-    border: 1px solid blue;
-    border-radius: 20px;
+    overflow-x: auto;
+    background-color: #58729378;
+    border-radius: 15px;
+    backdrop-filter: blur(5px);
+    /* box-shadow: 2px 2px 10px var(--clr-shadow-inner); */
+
+     h3 {
+        font-weight: 400;
+        font-size: .9rem;
+        color: var(--clr-placeholder);
+        margin: 5px 0px 10px 18px;
+    }
+}
+.scroll-container {
+    width: 100%;
+    height: 100px;
     display: flex;
-    align-items: center;
-    gap: .5rem;
-    overflow-x: scroll;
-} */
+    overflow-x: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;  
+}
+.child {
+    min-width: 70px;
+    height: 90%;
+    text-align: center;
+    display: grid;
+    align-content: center;
+    gap: 1rem;
+    border-radius: 10px;
+    h4 {
+        font-weight: 500;
+    }
+}
