--- a/WeatherApp/style.css
+++ b/WeatherApp/style.css
@@ -51,6 +51,7 @@ body {
         .gps-Loc-btn,
         #search-bar {
         background-color: var(--clr-accent-dark);
+        backdrop-filter: blur(5px);
         }
     }
     .hourly-forcast {
@@ -68,7 +69,7 @@ body {
     justify-content: start;
     align-items: center;
     border-radius: 20px;
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
     
     .bxs-map {
         width: 30px;
@@ -138,6 +139,15 @@ body {
         margin-block: 8px;
     }
 }
+.err {
+    transform: translateY(-100px);
+}
+.pre-load {
+    transform: translateY(-130px);
+}
+.load-error {
+    transform: translateY(-130px);
+}
 .current-loc {
     font-weight: 400;
 }
@@ -154,12 +164,14 @@ body {
 .condition {
     font-weight: 400;
 }
+.min_max {
+    margin-block: .20rem;
+}
 .temp-low {
     margin-left: 10px;
 }
 .rain-wind-info {
     width: 230px;
-    margin-top: 5px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -168,6 +180,7 @@ body {
 .bx-wind {
     font-size: 2rem;
     margin-inline: .2rem;
+    color: #caeaff;
 }
 .rain-wind-info h3 {
     font-size: 1.7rem;
@@ -201,6 +214,12 @@ body {
     overflow-x: auto;
     -ms-overflow-style: none;
     scrollbar-width: none;  
+}
+.bxs-error {
+    margin: auto auto 45px auto;
+    font-size: 2rem;
+    font-weight: 400;
+    color: var(--clr-placeholder);
 }
 .child {
     min-width: 70px;
