--- a/WeatherApp/style.css
+++ b/WeatherApp/style.css
@@ -141,9 +141,11 @@ body {
 }
 .err {
     transform: translateY(-100px);
+    text-shadow: none;
 }
 .pre-load {
     transform: translateY(-130px);
+    text-shadow: none;
 }
 .load-error {
     transform: translateY(-130px);
